--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
 
     "start": "node app.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix ecommerce-frontend && npm run build --prefix ecommerce-frontend"
   },
   "keywords": [],
   "author": "",
