--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "engines": {
     "node": "12.18.1",
     "npm": "6.14.5"
